fix the forward and backbutton with the z-index to display it on top of the side

--- a/styles/1_HomePage.css
+++ b/styles/1_HomePage.css
@@ -33,6 +33,7 @@ h1 {
     height: 100vh; /* Vollbild-Höhe */
     background-color: transparent; /* Unsichtbar */
     width: 50%;
+    z-index: 10;
 }
 
 #forward {
